<?xml version="1.0"?>
<package format="3">
  <name>waypoint_manager</name>
  <version>0.1.0</version>
  <description>Manage 2D waypoints from RViz and publish nav_msgs/Path.</description>
  <maintainer email="dexterong94@gmail.com">Dexter Ong</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_srvs</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
