[metadata]
name = waypoint_manager
version = 0.1.0

[options]
packages = find:
install_requires =
python_requires = >=3.8
include_package_data = True

[options.entry_points]
console_scripts =
    waypoints_gui = waypoint_manager.waypoints_gui:main

[develop]
script_dir=$base/lib/waypoint_manager

[install]
install_scripts=$base/lib/waypoint_manager
